cloud-infra-macros/tests/fails/iam_action_invalid_permission.stderr
error: `InvalidAction` action does not exist for service `s3`
 --> tests/fails/iam_action_invalid_permission.rs:4:30
  |
4 |     let action = iam_action!("s3:InvalidAction");
  |                              ^^^^^^^^^^^^^^^^^^
